base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: taskflow-api-policy
  namespace: taskflow
spec:
  podSelector:
    matchLabels:
      app: taskflow-api
  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from: []
      ports:
        - protocol: TCP
          port: 8000

  egress:
    - to: []
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to: []
      ports:
        - protocol: TCP
          port: 5432
    - to: []
      ports:
        - protocol: TCP
          port: 443
